--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg" href="/logo-onglet-crepuscule.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="height=device-height, 
+  width=device-width, initial-scale=1.0, 
+  minimum-scale=1.0, maximum-scale=1.0, 
+  user-scalable=no">
   <title>Crépuscule Festival - 2025</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
