--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="height=device-height, 
   width=device-width, initial-scale=1.0, 
   minimum-scale=1.0, maximum-scale=1.0, 
-  user-scalable=no, target-densitydpi=device-dpi">
+  user-scalable=no">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Days+One&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Orbitron:wght@400..900&display=swap"
     rel="stylesheet">
   <title>Crépuscule Festival - 2025</title>
 </head>
